[gd_scene load_steps=10 format=3 uid="uid://dhwjaf6omi0a7"]

[ext_resource type="Script" uid="uid://1oe6cqo8uo3j" path="res://scripts/ui/MainMenu.gd" id="1_xqga4"]
[ext_resource type="Texture2D" uid="uid://cd6ivs8a4a3sk" path="res://assets/mascot/background.png" id="2_1hnlc"]
[ext_resource type="FontFile" uid="uid://bc2b02432vkgl" path="res://fonts/PressStart2P-Regular.ttf" id="2_8r73w"]
[ext_resource type="PackedScene" uid="uid://bjr3hw1a60bio" path="res://scenes/menus/LevelButton.tscn" id="2_ng0o5"]
[ext_resource type="Texture2D" uid="uid://cbijyd3om0ltj" path="res://assets/ui/icons/icon_aquatica.png" id="3_8r73w"]
[ext_resource type="Texture2D" uid="uid://dwcs465vu4dv" path="res://assets/ui/icons/icon_terrestre.png" id="4_1hnlc"]
[ext_resource type="Texture2D" uid="uid://bclibufofi127" path="res://assets/mascot/mord_feliz.png" id="6_8r73w"]
[ext_resource type="Texture2D" uid="uid://kf8ckn65aqqk" path="res://assets/ui/icons/icon_sair.png" id="6_euy4r"]
[ext_resource type="AudioStream" uid="uid://bqhbrhdgn8qe7" path="res://assets/sounds/background.mp3" id="9_50h1w"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_xqga4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18431373, 0.36862746, 0.08235294, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 658.0
offset_top = 224.0
offset_right = 658.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_1hnlc")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_direction = 4
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_8r73w")
theme_override_font_sizes/font_size = 48
text = "MORDIDA SELVAGEM"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 24
columns = 2

[node name="BtnAquatica" parent="CenterContainer/VBoxContainer/GridContainer" instance=ExtResource("2_ng0o5")]
layout_mode = 2
title = "FASE AQU√ÅTICA"
icon = ExtResource("3_8r73w")
target_scene_path = "uid://cjygaq05318mo"

[node name="BtnTerrestre" parent="CenterContainer/VBoxContainer/GridContainer" instance=ExtResource("2_ng0o5")]
layout_mode = 2
title = "FASE TERRESTRE"
icon = ExtResource("4_1hnlc")
target_scene_path = "uid://col23s1sttqnb"
theme_key = "TERRESTRE"

[node name="BtnMinigame" parent="CenterContainer/VBoxContainer/GridContainer" instance=ExtResource("2_ng0o5")]
layout_mode = 2
title = "MINIGAME"
icon = ExtResource("6_8r73w")
target_scene_path = "uid://bpnue81xey8mg"
theme_key = "TUTORIAL"

[node name="BtnSair" parent="CenterContainer/VBoxContainer/GridContainer" instance=ExtResource("2_ng0o5")]
layout_mode = 2
title = "a"
icon = ExtResource("6_euy4r")
theme_key = "SAIR"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_50h1w")
volume_db = -6.0
autoplay = true
parameters/looping = true
